Refactor validation logic and error handling across commands
- Replaced CommandValidator with ValidationUtils for argument validation in RangeCommand, AddStreamCommand, RangeStreamCommand, ReadStreamCommand, GetCommand, IncrCommand, SetCommand, DiscardCommand, ExecCommand, and MultiCommand.
- Updated error handling to use ServerError instead of ValidationError for consistency.
- Simplified command registration in CommandFactory for list commands.
- Removed unused ProtocolError and ValidationError classes.
- Consolidated transaction state management by renaming TansactionState to TransactionState and updating related references.
- Enhanced StreamRepository and StringRepository for better readability and performance.
- Improved error message formatting and validation logic in ErrorCode and ValidationUtils.